--- a/platzi-asp-net-core.csproj
+++ b/platzi-asp-net-core.csproj
@@ -5,4 +5,9 @@
     <RootNamespace>platzi_asp_net_core</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0" />
+  </ItemGroup>
+
 </Project>
